test/unique/neg/local-inherit-shared.check
local-inherit-shared.scala:7: error: extended type must be local or immutable
class LogFile(parent: String, child: String) extends SuperFile(parent, child) {
      ^
one error found
